kubernetes/clusters/kenobi/longhorn-system/templates/namespace.yaml
apiVersion: v1
kind: Namespace

metadata:
  name: longhorn-system
  labels:
    istio-injection: enabled
