kubernetes/clusters/kenobi/longhorn-system/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn

spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`longhorn.feldman.in`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-feldman-in-tls
